Correct displays <input type="date/time"> on iOS

--- a/scss/_reboot.scss
+++ b/scss/_reboot.scss
@@ -557,6 +557,15 @@ legend {
   -webkit-appearance: textfield; // 2
 }
 
+// Correct element displays on iOS.
+// See https://stackoverflow.com/questions/26573346/ios-safari-messes-up-input-type-date.
+[type="date"],
+[type="time"],
+[type="datetime-local"],
+[type="month"] {
+  -webkit-appearance: textfield;
+}
+
 // Remove the inner padding in Chrome and Safari on macOS.
 
 ::-webkit-search-decoration {
